frontend/style.css
@set my-v-scrollbar {
  .slider {
    border: 1dip solid var(--bg1);
    background: var(--bg2);
  }

  .slider:hover {}

  .slider:active {
    background: var(--bg);
  }

  .base {
    width: 8dip;
  }

  .base:hover {
    width: 4dip;
  }
}

@set my-h-scrollbar {
  .slider {
    display: none;
  }

  .slider:active {
    display: none;
  }

  .base {
    display: none;
  }

  .base:hover {
    display: none;
  }
}

@keyframes slide {
  0% {
    transform: translate(10, 1);
  }

  100% {
    transform: translate(1, 1);
  }
}

@keyframes fade {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes loading {
  0% {
    transform: rotate(-360deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

html {
  min-width: 640dip;
  min-height: 200dip;
}

body {
  margin: 0;
  padding: 0;
  background-color: var(--bg);
  color: var(--fg);
  overflow: hidden;
  vertical-scrollbar: my-v-scrollbar;
  horizontal-scrollbar: my-h-scrollbar;
  font-family: Helvetica, 'Segoe UI', sans-serif;
}

a {
  color: var(--fg2);
}

button {
  background: var(--bg2);
  color: var(--fg);
  border: none;
  text-decoration: none;
  display: inline-block;
  transition: background ease 0.5s;
}


button:hover {
  background: var(--bg1);
  transition: background ease 0.5s;
}

ul {
  margin: 0;
  margin-bottom: 10dip;
}

input[type=text] {
  margin-bottom: 10dip;
  background: var(--bg1);
  color: var(--fg);
  border: 0;
  text-selection-caret-color: var(--fg);
}

input[type=hslider] {
  height: 16dip;
  background: var(--bg1);
  padding: 0;
  display: block;
}

input[type=hslider]>button.slider {
  display: none;
}

input[type=hslider] {
  background-image: url(stock:block);
  background-repeat: no-repeat;
  background-size: length(slider-position) 100%;
  fill: var(--fg);
  stroke-width: 0;
  padding: 0;
  display: block;
}

menu {
  background-color: var(--fg3);
  border: 0;
  animation: ease 200ms fade;
}

menu li {
  color: var(--fg);
  transform: translate(1, 1);
  animation: ease 300ms slide;
}

h2 {
  margin-bottom: 5dip;
}

p {
  margin: 0;
  padding: 0;
}

select {
  background: var(--bg1);
  color: var(--fg);
  border: 0;
  width: "*";
}

option {
  font-size: 14dip;
  background: var(--bg1);
  color: var(--fg);
  transition: background-color ease 200ms;
}

option:hover {
  background: var(--fg3);
  color: var(--fg);
  transition: background-color ease 50ms;
}

popup.list {
  border: 0;
}

#album-import-modal {
  margin: 10dip;
  width: "*";
  height: "*";
  background: none;
  border: 0;
}

#album-import-modal input {
  width: "*";
  font-size: large;
  font-weight: 600;
  box-shadow: 0dip 0dip 0dip var(--bg1);
  transition: box-shadow 1s;
}

#album-import-modal input:focus {
  box-shadow: 0dip 0dip 30dip var(--bg1);
  transition: box-shadow 1s;
}

#album-import-modal button {
  font-size: large;
}


#tags-select {
  width: 10em;
  opacity: 1;
  height: "*";
  overflow-y: scroll;
  overflow-x: hidden;
  transition: width 300ms;
}

#tags-select.closed {
  width: 0em;
  transition: width 300ms;
}

#welcome-message {
  width: 300dip;
  height: 50dip;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -25dip 0 0 -150dip;
  color: var(--bg1);
  text-align: center;
  z-index: -1;
}

#tags-select option {
  padding: 3dip;
  padding-left: 8dip;
}

#controls {
  padding-right: 20dip;
}

#controls .image-button {
  padding: 16dip;
  padding-left: 8dip;
  padding-right: 8dip;
}

#trackbar {
  flow: vertical;
  height: 24dip;
  width: *;
}

#bottom-panel {
  border-top: 1dip solid var(--bg1);
  padding-left: 12dip;
  flow: horizontal;
}

#track-name {
  text-overflow: ellipsis;
  width: 1*;
  font-weight: bold;
}

#trackinfo {
  flow: horizontal;
  padding-right: 10dip;
  vertical-align: middle;
  height: 32dip;
}

#trackinfo p {
  padding-right: 5dip;
}

#seekbar {
  width: "*";
}

#volume {
  width: 150dip;
  padding-right: 10dip;
  position: relative;
}

#total-time {
  color: var(--fg2);
}

#discover-window {
  margin-left: 10dip;
  flow: vertical;
  border-right: 1dip solid var(--bg1);
  width: 1.9*;
  height: "*";
  overflow-y: hidden;
}

#discover-heading {
  padding-right: 10dip;
  padding-top: 10dip;
  padding-bottom: 0dip;
  background: none;
  font-size: large;
  font-weight: bold;
  width: 100%;
}

#queue-select {
  flow: vertical;
  max-width: 20%;
  height: "*";
  overflow-y: scroll;
  transition: width 300ms;
}

#queue-select.closed {
  width: 0dip;
  transition: width 300ms;
}

#options-modal {
  padding: 0dip;
  height: 50%;
  width: 50%;
  min-width: 500dip;
  min-height: 320dip;
}

#options-modal button {
  margin: 5dip;
}

#options-general {
  background-image: url("icons/wrench.jpg");
}

#options-audio {
  background-image: url("icons/audio.jpg");
}

#options-about {
  background-image: url("icons/about.jpg");
}

#search-results {
  overflow: scroll;
  height: 90vh;
  margin-bottom: 10dip;
}

#search-results .track-card {
  margin-left: 5dip;
  padding-left: 5dip;
  margin-bottom: 10dip;
  background: none;
  box-shadow: none;
  border: none;
  border-left: 0dip solid #00000000;
  border-radius: 0dip;
  transition: border-color 200ms;
  animation: ease 200ms fade alternate;
}

#current-time {
  color: var(--fg);
  font-weight: bold;
}

#menu {
  background-color: var(--bg2);
  height: "*";
  flow: vertical;
  transition: width ease 0.5s;
}

#menu img {
  padding: 8dip;
}

#search-results .track-card:hover {
  margin-left: 0dip;
  border-left: 5dip solid var(--fg2);
  transition: border-color 300ms;
}

#loading {
  width: 32dip;
  height: 32dip;
  position: fixed;
  top: 50%;
  left: 50%;
  margin-top: -16dip;
  margin-left: -16dip;
  animation: sine-in-out 5000ms loading infinite;
  color: var(--fg);
  opacity: 1;
  transition: opacity 200ms;
  z-index: 5;
}

#loading.closing {
  opacity: 0;
  transition: opacity 200ms;
}

#loading img {
  display: block;
  width: 32dip;
  height: 32dip;
}

.album-selector {
  border-spacing: "1.3";
  flow: horizontal-wrap;
  height: "*";
  overflow: scroll;
}

.option-tab {
  width: 100dip;
  height: 100dip;
  background-size: cover;
  color: var(--fg);
  margin: 5dip;
  transform: scale(1.0, 1.0);
  transition: transform 0.2s, color 0.5s;
}

.option-tab:hover {
  color: var(--fg2);
  transform: scale(1.1, 1.1);
  transition: transform 0.2s, color 0.5s;
}


.selected {
  color: var(--fg2);
  border: 2dip solid var(--fg);
  margin: 3dip;
}

.option-tab h3 {
  padding-left: 5dip;
  padding-top: 75dip;
  margin: 0;
}

.option-tabs {
  background: var(--bg1);
  margin-right: 20dip;
  height: 100%;
}

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  transition: background-color 200ms, backdrop-filter 200ms;
  backdrop-filter: blur(3px);
}

.modal.active {
  display: block;
  background-color: rgba(0, 0, 0, 0.8);
  transition: background-color 200ms, backdrop-filter 200ms;
}

.modal.closing {
  background-color: rgba(0, 0, 0, 0);
  transition: background-color 200ms, backdrop-filter 200ms;
  backdrop-filter: none;
}

.modal-content {
  display: none;
  background-color: var(--bg);
  margin: calc(50% - 200dip) auto;
  padding: 20dip;
  border: 1dip solid var(--bg1);
  border-radius: 5dip;
  width: 300dip;
  box-shadow: 0dip 0dip 10dip #00000022;
}

.modal-content h1 {
  padding: 0;
  margin: 0;
  margin-bottom: 10dip;
}

.modal-content p {
  padding-top: 5dip;
  padding-bottom: 5dip;
}

.album-card {
  width: 150dip;
  height: 210dip;
  margin: 20dip;
  margin-bottom: 0;
  overflow: hidden;
  background: var(--bg1);
  color: var(--fg);
  border-radius: 10dip;
  border: 1dip solid var(--bg2);
  box-shadow: 0dip 0dip 20dip var(--bg1);
  transform: scale(1.0, 1.0);
  transition: transform ease 0.2s, box-shadow ease 0.2s;
  animation: ease 1000ms fade;
}


.album-card:hover {
  transform: scale(1.12, 1.12);
  box-shadow: 0dip 0dip 20dip var(--bg2);
  transition: transform ease 0.2s, box-shadow ease 0.2s;
}

.track-card {
  width: "*";
  height: 64dip;
  padding: 2dip;
  flow: horizontal;
  background: var(--bg1);
  transition: background 300ms;
}

.track-card:hover {
  background: var(--bg2);
}

.current {
  background: var(--fg3);
}

.track-card-desc {
  flow: vertical;
  text-overflow: ellipsis;
  height: 64dip;
  padding: 5dip;
}

.track-card-desc h3 {
  font-size: 14dip;
  max-height: 32dip;
  overflow: hidden;
  margin: 0;
  padding: 0;
}

.track-card img {
  width: 64dip;
  height: 64dip;
}

.album-description {
  padding: 8dip;
}

.album-image {
  width: 150dip;
  height: 150dip;
  border-bottom: 1dip solid var(--bg2);
}

.album-description h3 {
  margin: 0;
  height: 20dip;
  overflow: hidden;
}

.welcome-message {
  height: *;
  width: *;
  position: relative;
}

.welcome-message h1 {
  margin: 0;
  padding: 0;
}

.option-selection {
  margin: 10dip;
  width: "*";
}

.option-selection input {
  padding-top: 10dip;
  padding-right: 5dip;
}

.hidden {
  display: none;
}

.lists-window {
  flow: horizontal;
  height: "*";
}

.image-button {
  width: 16dip;
  height: 16dip;
  padding: 5px;
  color: var(--fg);
  transition: color ease 0.5s;
}

.image-button:hover {
  color: var(--fg2);
  transition: color ease 0.5s;
}

.image-button:disabled {
  color: var(--fg3);
}

.main-window {
  flow: vertical;
  height: 100vh;
}

.error-modal {
  max-width: 50%;
  background-color: var(--bg2);
  color: var(--fg);
  text-align: center;
  border-radius: 10dip;
  font-size: 16dip;
  padding: 5dip;
  position: fixed;
  left: 50%;
  width: auto;
  z-index: 1;
  bottom: 20%;
  transform: translate(-50%);
  animation: sine-in-out 1000ms fade alternate;
  z-index: 5;
  opacity: 1;
}

.error-modal.closing {
  opacity: 0;
  transition: opacity 500ms;
}

@media window-size == "small" {
  .track-card {
    height: auto;
    border-radius: 0;
    margin: 0dip;
    padding: 5dip;
    box-shadow: none;
  }

  .track-card img {
    display: none;
  }

  #volume {
    width: 100dip;
  }
}

